@@ -3,13 +3,14 @@ Demnächst anschauen
 ----------------------------------------------------------------------
 
 Schnittstelle auf Port 1012 benutzen
-
-Doppelte Mail bei verpasstem Anruf, einmal ohne, einmal mit Semikolon (?)
+    Regel-Matching an neue Ereignisse anpassen
 
 Schnelle Benachrichtung ohne Rückwärtssuche; dann "Vervollständigung" der
 Informationen?
 
 Diagnoseseite
+
+Doppelte Mail bei verpasstem Anruf, einmal ohne, einmal mit Semikolon (?)
 
 Betrieb ohne Mod vorbereiten (zum Nachladen auf unveränderte Firmware)
     Mod-Busybox nachladen
